[package]
name = "demo"
version = "0.1.0"
authors = ["Sven Sauleau <sven@sauleau.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.50"
js-sys = "0.3.27"
console_error_panic_hook = "0.1.1"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.27"
features = [
  "Document",
  "Event",
  "Element",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "EventListener",
  "Node",
  "Window"
]
