[package]
name = "tinder-for-lava-lamps"
version = "0.1.0"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.27"
lazy_static = "1.4.0"

